text overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -155,6 +155,9 @@
   padding: 5px;
   border: 0;
   font-size: 1.2rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 100%;
 }
 
 .todo__single__input {
